refactor: move 004 contents to project root and remove 004 directory (overwrite)

--- a/pytest.ini
+++ b/pytest.ini
@@ -3,4 +3,5 @@ testpaths = tests
 python_files = test_*.py
 python_classes = Test*
 python_functions = test_*
-addopts = -v --cov=src --cov-report=term-missing --cov-report=html
+markers =
+    llm: marks tests as requiring LLM API access (deselect with '-m "not llm"') 
